--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "wrangler deploy"
   },
   "dependencies": {
-    "hono": "^3.12.0"
+    "hono": "^3.12.0",
+    "inter-ui": "^4.1.0"
   },
   "devDependencies": {
     "wrangler": "^4.13.0"
