--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,4 +12,8 @@ database_id = ""  # 在本地开发时需要填入您的数据库ID
 # 本地开发时会从 .dev.vars 加载
 # 生产环境需要在 Cloudflare Dashboard 中配置
 [vars]
-EMAIL_DOMAIN = "" 
+EMAIL_DOMAIN = ""
+
+[build]
+command = "cd public && npm install && npm run build"
+build_output_directory = "public/dist" 
