--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 [build]
 command = "cd public && npm install && npm run build"
-pages_build_output_directory = "public/dist"
+build_output_directory = "public/dist"
 
 [site]
 bucket = "./public/dist"
